--- a/CSS/home.css
+++ b/CSS/home.css
@@ -1,5 +1,8 @@
 body {
   font-family: 'Montserrat', sans-serif;
+  background: url("../assets/sidewavecolor.svg");
+  background-size: ccover;
+  background-repeat: no-repeat;
 }
 
 h1 {
@@ -28,11 +31,29 @@ h1 {
 
 #navbar-my {
   padding: 2% 15%;
+  padding-top: 1%;
 }
 
 .navbar {
   padding: 0.5rem 0rem;
   font-weight: 300;
+}
+
+.navbar-btn {
+  background: #fff;
+  color: #4534aa;
+  border: none;
+  padding: 5px 15px;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  border-radius: 16px;
+}
+
+.navbar-btn:hover {
+  background: #4534aa;
+  color: #fff;
+  opacity: .71;
 }
 
 /* MAIN SECTION AND EVERYTHING IN MAIN */
@@ -49,11 +70,13 @@ h1 {
 .btn-explore:hover {
   color: white;
   background: #6C63FF;
-  border: 1px solid #6C63FF;
 }
 
 #goal {
   padding: 5% 15%;
+  /* background-image: url("../assets/middle.svg");
+  background-repeat: no-repeat;
+  background-position: center; */
 }
 
 .boot-icon {
@@ -62,7 +85,7 @@ h1 {
 
 #wwp {
   padding: 5% 15%;
-  padding-bottom: 10%;
+  padding-bottom: 15%;
 }
 
 .card {
@@ -75,10 +98,6 @@ h1 {
   margin-bottom: 1.25rem;
   height: 180px;
   background-color: #d6d1f5;
-}
-
-.card-body {
-  padding: 0px;
 }
 
 mark {
@@ -95,6 +114,9 @@ mark {
   width: 100%;
   padding: 5% 5%;
   background: #f8f9fa;
+  background-image: url("../assets/wave2.svg");
+  background-repeat: no-repeat;
+  background-position: bottom;
 }
 
 .person-pin {
@@ -122,3 +144,13 @@ footer {
   font-family: 'Montserrat', sans-serif;
   font-weight: 800;
 }
+
+opacity-my {
+  opacity: .6;
+}
+
+opacity-my:hover {
+  opacity: 1;
+}
+
+#back {}
